[package]
name = "zw"
version = "0.1.0"
edition = "2018"

[lib]
name = "zw"
path = "src/lib.rs"

[[bin]]
name = "str2zw"
path = "src/bin/str2zw.rs"

[[bin]]
name = "zw2str"
path = "src/bin/zw2str.rs"

[[bin]]
name= "zw"
path = "src/bin/auto.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
atty = "0.2"
