[package]
name = "zw"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Utility for encoding and decoding text using zero-width characters"
repository = "https://github.com/tje/rs-zw"
readme = "README.md"

[lib]
name = "zw"
path = "src/lib.rs"

[[bin]]
name= "zw"
path = "src/bin/auto.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
atty = "0.2"
